app/assets/stylesheets/home.css.less
.wrapper {
    .container.outer {
        background: #fff;
    }
}

#butterfly-handbag-hero {
    background: url('/assets/ipadcase2thumb.png');
    background-repeat: no-repeat;
    background-color: #d4eeed;
    background-position: right; 
    color: #3A4E4E;

    h1 {
        font-family: 'Nixie One', cursive;
        padding-bottom: 6px;
    }

    h3 {
        padding-bottom: 6px;
    }
}

#front-page-thumb1 {
    background-color: #d4eeed;
}

#front-page-thumb2 {
    background-color: #d4eeed;
}

#front-page-thumb3 {
    background-color: #d4eeed;
}

